fixed sonar major severity violation "Integer Instantiation" in multiple places