@@ -17,9 +17,9 @@ public class AddMultiplyModeInt extends AddMultiplyMode<Integer> {
 	protected AddMultiplyModeInt(Axis axis) {
 		super(axis);
 		// initialize with default values
-		this.start = new Integer(axis.getDefaultValue());
-		this.stop = new Integer(axis.getDefaultValue());
-		this.stepwidth = new Integer(axis.getDefaultValue());
+		this.start = Integer.valueOf(axis.getDefaultValue());
+		this.stop = Integer.valueOf(axis.getDefaultValue());
+		this.stepwidth = Integer.valueOf(axis.getDefaultValue());
 	}
 
 	/**
